// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transactions selector tests getReceiptTransaction should return transaction by id(receiptId)  1`] = `
Object {
  "accountId": "PPY5107",
  "amount": -1,
  "clientId": "6449",
  "currency": Object {
    "code": "EUR",
  },
  "description": "To: Elfur Long 12",
  "executedAt": "2019-10-11T10:08:47",
  "fee": 0,
  "fromBank": "Papaya",
  "fromName": "Ralf Williams",
  "fromNumber": "MT98PAPY36836000002676370004519",
  "fromPanDisplay": null,
  "id": "PPY184597",
  "openapiData": Object {
    "externalOwnerID": null,
    "fromCardPan": null,
    "subType": null,
    "toCard": null,
    "toPhone": "79032950311",
    "type": "TO_CONTACT",
  },
  "operationType": null,
  "paymentToRepeat": Object {
    "account": "PPY5107",
    "address": null,
    "amount": 1,
    "beneficiaryAccount": null,
    "beneficiaryBank": null,
    "beneficiaryName": null,
    "cardNumber": null,
    "city": null,
    "commissionType": null,
    "country": null,
    "currencyCode": "EUR",
    "fromCardId": null,
    "fromCardPan": null,
    "fromPhone": "79111111111",
    "iban": null,
    "intermediaryAccount": null,
    "intermediaryBank": null,
    "intermediarySwift": null,
    "phoneNumber": "79032950311",
    "purpose": "other 123",
    "swiftCode": null,
    "transferDetails": null,
    "type": "PAYMENT_PHONE",
    "urgency": null,
  },
  "paymentType": "TRANSFER",
  "referenceNumber": "PPY84f7087c-c511-4928-b299-13ee47c1bd9",
  "status": "COMPLETED",
  "toBank": "Papaya",
  "toName": "Elfur Long",
  "toNumber": "MT52PAPY36836000002676370000303",
}
`;

exports[`transactions selector tests getTransactionsWithFilters should return filtered transactions 1`] = `
Object {
  "11/10/2019": Array [
    Object {
      "accountId": "PPY5107",
      "amount": -10,
      "clientId": "6449",
      "currency": Object {
        "code": "EUR",
      },
      "description": "To: Dmitrii Popov Vvg",
      "executedAt": "2019-10-11T10:12:00",
      "fee": 0,
      "fromBank": "Papaya",
      "fromName": "Ralf Williams",
      "fromNumber": "MT98PAPY36836000002676370004519",
      "fromPanDisplay": null,
      "id": "PPY184598",
      "openapiData": Object {
        "externalOwnerID": null,
        "fromCardPan": null,
        "subType": null,
        "toCard": null,
        "toPhone": "79085491121",
        "type": "TO_CONTACT",
      },
      "operationType": null,
      "paymentToRepeat": Object {
        "account": "PPY5107",
        "address": null,
        "amount": 10,
        "beneficiaryAccount": null,
        "beneficiaryBank": null,
        "beneficiaryName": null,
        "cardNumber": null,
        "city": null,
        "commissionType": null,
        "country": null,
        "currencyCode": "EUR",
        "fromCardId": null,
        "fromCardPan": null,
        "fromPhone": "79111111111",
        "iban": null,
        "intermediaryAccount": null,
        "intermediaryBank": null,
        "intermediarySwift": null,
        "phoneNumber": "79085491121",
        "purpose": "other Vvgh",
        "swiftCode": null,
        "transferDetails": null,
        "type": "PAYMENT_PHONE",
        "urgency": null,
      },
      "paymentType": "TRANSFER",
      "referenceNumber": "PPY1e1d31e3-6acb-4d60-9f70-b9151221d11",
      "simpleAccount": Object {
        "accountName": "MT98PAPY36836000002676370004519",
        "accountType": "PHYSICAL",
        "accruedInterest": null,
        "availableBalance": 1897.61,
        "availableOperations": Array [],
        "balance": 0,
        "balanceHold": 0,
        "balances": Array [
          Object {
            "availableBalance": 1897.61,
            "balance": 1030.05,
            "balanceHold": 0,
            "currency": "EUR",
          },
        ],
        "bonusProgramActivate": false,
        "clientId": "6449",
        "color": "DEFAULT",
        "createdAt": "2019-11-24T14:59:55",
        "currency": Object {
          "code": "EUR",
        },
        "id": "PPY5107",
        "number": "MT98PAPY36836000002676370004519",
        "status": "ACTIVE",
      },
      "status": "COMPLETED",
      "toBank": "Papaya",
      "toName": "Dmitrii Popov",
      "toNumber": "MT97PAPY36836000002676370003470",
    },
    Object {
      "accountId": "PPY5107",
      "amount": -1,
      "clientId": "6449",
      "currency": Object {
        "code": "EUR",
      },
      "description": "To: Elfur Long 12",
      "executedAt": "2019-10-11T10:08:47",
      "fee": 0,
      "fromBank": "Papaya",
      "fromName": "Ralf Williams",
      "fromNumber": "MT98PAPY36836000002676370004519",
      "fromPanDisplay": null,
      "id": "PPY184597",
      "openapiData": Object {
        "externalOwnerID": null,
        "fromCardPan": null,
        "subType": null,
        "toCard": null,
        "toPhone": "79032950311",
        "type": "TO_CONTACT",
      },
      "operationType": null,
      "paymentToRepeat": Object {
        "account": "PPY5107",
        "address": null,
        "amount": 1,
        "beneficiaryAccount": null,
        "beneficiaryBank": null,
        "beneficiaryName": null,
        "cardNumber": null,
        "city": null,
        "commissionType": null,
        "country": null,
        "currencyCode": "EUR",
        "fromCardId": null,
        "fromCardPan": null,
        "fromPhone": "79111111111",
        "iban": null,
        "intermediaryAccount": null,
        "intermediaryBank": null,
        "intermediarySwift": null,
        "phoneNumber": "79032950311",
        "purpose": "other 123",
        "swiftCode": null,
        "transferDetails": null,
        "type": "PAYMENT_PHONE",
        "urgency": null,
      },
      "paymentType": "TRANSFER",
      "referenceNumber": "PPY84f7087c-c511-4928-b299-13ee47c1bd9",
      "simpleAccount": Object {
        "accountName": "MT98PAPY36836000002676370004519",
        "accountType": "PHYSICAL",
        "accruedInterest": null,
        "availableBalance": 1897.61,
        "availableOperations": Array [],
        "balance": 0,
        "balanceHold": 0,
        "balances": Array [
          Object {
            "availableBalance": 1897.61,
            "balance": 1030.05,
            "balanceHold": 0,
            "currency": "EUR",
          },
        ],
        "bonusProgramActivate": false,
        "clientId": "6449",
        "color": "DEFAULT",
        "createdAt": "2019-11-24T14:59:55",
        "currency": Object {
          "code": "EUR",
        },
        "id": "PPY5107",
        "number": "MT98PAPY36836000002676370004519",
        "status": "ACTIVE",
      },
      "status": "COMPLETED",
      "toBank": "Papaya",
      "toName": "Elfur Long",
      "toNumber": "MT52PAPY36836000002676370000303",
    },
  ],
}
`;
